--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ shrs = { git = "https://github.com/MrPicklePinosaur/shrs" }
 shrs_mux = { git = "https://github.com/MrPicklePinosaur/shrs" }
 shrs_command_timer = { git = "https://github.com/MrPicklePinosaur/shrs" }
 shrs_cd_tools = { git = "https://github.com/MrPicklePinosaur/shrs" }
+shrs_openai = { git = "https://github.com/MrPicklePinosaur/shrs_openai" }
 
 dirs = "5"
 anyhow = "1"
